syntax = "proto3";
package propositions;
import "formulas.proto";
option java_package = "com.booleworks.logicng.propositions";
option java_outer_classname = "ProtoBufPropositions";

message PBStandardProposition {
  formulas.PBFormula formula = 1;
  string description = 2;
}
